- fixed a bug in stratified CV where elements where not distributed as evenly as possible
  when the split number did not divide the number of observation
- added class.weights param for classif.svm
- add fix.factors option to randomForest
- generic standard error estimation in randomForest and BaggingWrapper
- added fixup.data option to task contructors, so basic data cleanup can be performed
- show.info is now an option in configureMlr
- learners now support taggable properties that can be queried and changed. also see below.
- listLearners(forTask) was unified
- removed tuning via R' optim method (makeTuneControlOptim), as the optimizers in there really make
  no sense for tuning


- new learners:
-- classif.knn
-- classif.IBk
-- classif.LiblineaRBinary
-- classif.LiblineaRLogReg
-- classif.LiblineaRMultiClass
-- classif.linDA
-- classif.plr
-- classif.plsDA
-- classif.rrlda
-- regr.crs
-- regr.IBk
-- regr.mob
-- surv.CoxBoost
-- surv.coxph
-- surv.glmnet

- new measures
-- cost sens ????
-- multiauc???

- new functions
-- removeConstantFeatures, normalizeFeatures, dropFeatures
-- getTaskNFeats
-- hasProperties, getProperties, setProperties, addProperties, removeProperties
-- showHyperPars
-- listMeasures
-- plotLearnerPrediction
-- plotThreshVsPerf
-- holdout, subsample, crossval, repcv, bootstrapOOB, bootstrapB632, bootstrapB632plus
-- listFilterMethods, getFilterValues, filterFeatures, makeFilterWrapper, plotFilterValues
-- benchmark
-- getPerformances, getAggrPerformances, getPredictions, getFilterResult, getTuneResult, getFeatSelResult
-- oversample, undersample, makeOversampleWrapper, makeUndersampleWrapper
-- smote, makeSmoteWrapper
-- downsample, makeDownsampleWrapper
-- makeModelMultiplexer, makeModelMultiplexerParamSet
-- makeCostSensTaks, makeCostSensRegrWrapper, makeCostsSensWeightedPairsLearner

- imputation stuff ????
- surv stuff ????
- <really check logs!>

mlr_1.1:
- Initial release to CRAN